--- a/BCI_III_DS_2_TestSet_PreProcessing.ipynb
+++ b/BCI_III_DS_2_TestSet_PreProcessing.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -21,10 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io\n",
@@ -56,8 +52,8 @@
    ],
    "source": [
     "\n",
-    "TEST_A = 'data/BCI_Comp_III_Wads_2004/Subject_A_Test1.mat'\n",
-    "TEST_B = 'data/BCI_Comp_III_Wads_2004/Subject_B_Test1.mat'\n",
+    "TEST_A = 'Subject_A_Test.mat'\n",
+    "TEST_B = 'data/BCI_Comp_III_Wads_2004/Subject_B_Test.mat'\n",
     "\n",
     "TRUE_LABELS_A = 'WQXPLZCOMRKO97YFZDEZ1DPI9NNVGRQDJCUVRMEUOOOJD2UFYPOO6J7LDGYEGOA5VHNEHBTXOO1TDOILUEE5BFAEEXAW_K4R3MRU'\n",
     "TRUE_LABELS_B = 'MERMIROOMUHJPXJOHUVLEORZP3GLOO7AUFDKEFTWEOOALZOP9ROCGZET1Y19EWX65QUYU7NAK_4YCJDVDNGQXODBEV2B5EFDIDNR'\n",
@@ -572,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
